configuring tests compiler to use endorsed jars
git-svn-id: https://anonsvn.jboss.org/repos/jbossws/stack/native/trunk@11554 50344849-fb0f-0410-a53f-a94597aac05c