@@ -361,6 +361,7 @@
             <configuration>
               <!-- http://jira.codehaus.org/browse/MCOMPILER-72 -->
               <testExcludeFile>../test-excludes-jboss501.txt</testExcludeFile>
+              <compilerArgument>-Djava.endorsed.dirs=${jboss501.home}/lib/endorsed</compilerArgument>
             </configuration>
           </plugin>
           <plugin>
@@ -412,6 +413,7 @@
             <configuration>
               <!-- http://jira.codehaus.org/browse/MCOMPILER-72 -->
               <testExcludeFile>../test-excludes-jboss510.txt</testExcludeFile>
+              <compilerArgument>-Djava.endorsed.dirs=${jboss510.home}/lib/endorsed</compilerArgument>
             </configuration>
           </plugin>
           <plugin>
@@ -463,6 +465,7 @@
             <configuration>
               <!-- http://jira.codehaus.org/browse/MCOMPILER-72 -->
               <testExcludeFile>../test-excludes-jboss600.txt</testExcludeFile>
+              <compilerArgument>-Djava.endorsed.dirs=${jboss600.home}/lib/endorsed</compilerArgument>
             </configuration>
           </plugin>
           <plugin>
@@ -514,6 +517,7 @@
             <configuration>
               <!-- http://jira.codehaus.org/browse/MCOMPILER-72 -->
               <testExcludeFile>../test-excludes-jboss601.txt</testExcludeFile>
+              <compilerArgument>-Djava.endorsed.dirs=${jboss601.home}/lib/endorsed</compilerArgument>
             </configuration>
           </plugin>
           <plugin>
